# r-type

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  RFC.txt  TcpProtocol.json  _compile.sh  cmake_install.cmake  compile.sh  conanfile.txt  rtype  rtype.cbp
.buildTools/: _select_compile.sh  _start_compile.sh
Client/includes/: Game.hpp  MessageBox.hpp  ServerConnection.hpp
Client/lib/TimedEvent/: TimedEvent.cpp  TimedEvent.hpp
Client/src/: Game.cpp  Main.cpp  ServerConnection.cpp
Client/src/game/component/: AnimationRtype.hpp  Bonuses.hpp  Firerate.hpp  Parallax.hpp  Types.hpp  ai.hpp  enemyFactory.hpp  wall.hpp
Client/src/game/enemy/: enemy.hpp
Client/src/game/enemy/enemy1/: enemy1.cpp  enemy1.hpp
Client/src/game/enemy/enemy2/: enemy2.cpp  enemy2.hpp
Client/src/game/enemy/enemy3/: enemy3.cpp  enemy3.hpp
Client/src/game/menu/: Menu.cpp  Menu.hpp  Selection.hpp  TextDisplay.hpp
Client/src/game/system/: Fire.cpp  Fire.hpp  Parallaxs.cpp  Parallaxs.hpp  ai.cpp  ai.hpp  gen.cpp  gen.hpp  walls.cpp  walls.hpp
Client/src/game_engine/component/audio/: Sound.hpp
Client/src/game_engine/component/control/: DeplacementKeyBoard.hpp  DeplacementMouse.hpp
Client/src/game_engine/component/graphical/: AnimatedSprite.hpp  AnimatedSpriteMap.hpp  Drawable.hpp  Sprite.hpp
Client/src/game_engine/component/physic/: Hitbox.hpp  Speed.hpp
Client/src/game_engine/ecs/: Ecs.hpp  ListComponent.hpp
Client/src/game_engine/sfml/: Graphic.cpp  Graphic.hpp
Client/src/game_engine/system/control/: Controls.cpp
Client/src/game_engine/system/physic/: Acceleration.hpp  Speeds.cpp
Common/: Constant.hpp  WindowsCtor.cpp  WindowsCtor.hpp  ctor.h
Common/Event/: Event.hpp  Event.tpp  HdlCollector.hpp  Manager.hpp  Manager.tpp
Common/Event/src/: Event.cpp  HdlCollector.cpp
Common/FdStream/: FdStream.cpp  FdStream.hpp
Common/GameEngine/TimedEvent/: TimedEvent.cpp  TimedEvent.hpp
Common/GameEngine/component/control/: DeplacementKeyBoard.hpp  Keyboard.hpp  LazyDeplacementMouse.hpp
Common/GameEngine/component/graphical/: AnimatedSprite.hpp  Sprite.hpp
Common/GameEngine/component/online/: OnlineComponent.hpp
Common/GameEngine/component/physic/: Acceleration.hpp  Hitbox.hpp  Position.hpp  Speed.hpp
Common/GameEngine/core/: Time.cpp
Common/GameEngine/ecs/: DataBank.hpp  Ecs.hpp  ListComponent.hpp
Common/GameEngine/sfml/: Graphic.cpp  Graphic.hpp
Common/GameEngine/system/control/: Controls.cpp  Controls.hpp  ControlsSFML.cpp  ControlsSFML.hpp
Common/GameEngine/system/graphical/: Graphicals.cpp
Common/GameEngine/system/physic/: Acceleration.cpp  Speeds.cpp
Common/Json/: Entity.hpp
Common/Json/includes/: Entity.hpp
Common/Json/src/: Entity.cpp  Parser.cpp
Common/JsonBuilder/: JsonBuilder.cpp  JsonBuilder.hpp
Common/Network/: EndpointBase.hpp  GameProtocol.hpp  _Network.hpp
Common/Network/TcpSocket/: ATcpSocket.hpp  CMakeLists.txt  CommonTcpSocket.cpp  TcpSocket.hpp  TestTcpSocket.cpp
Common/Network/TcpSocket/Unix/: UnixTcpSocket.cpp  UnixTcpSocket.hpp
Common/Network/TcpSocket/Windows/: WindowsTcpSocket.cpp  WindowsTcpSocket.hpp
Common/Network/UdpSocket/: UdpSocket.cpp  UdpSocket.hpp
Common/Opts/: Opts.cpp  Opts.hpp  testOpts.cpp
Common/TcpSocket/: ATcpSocket.hpp  CMakeLists.txt  CommonTcpSocket.cpp  ITcpSocket.hpp  TcpSocket.cpp  TcpSocket.hpp  TestTcpSocket.cpp
Common/TcpSocket/Unix/: UnixTcpSocket.cpp  UnixTcpSocket.hpp
Common/TcpSocket/Windows/: WindowsTcpSocket.cpp  WindowsTcpSocket.hpp
Common/UdpSocket/: UdpSocket.hpp
ConanPlatformSettings/: linux.txt  windows.txt
Launcher/: .gitignore  Launcher.pro  about.cpp  about.h  about.ui  cache.cpp  cache.h  gameitem.cpp  gameitem.h  gameitem.ui  gamelauncher.cpp  gamelauncher.h  hashchecker.cpp  hashchecker.h  launchermainwindows.cpp  launchermainwindows.h  launchermainwindows.ui  listgameitem.cpp  listgameitem.h  main.cpp  mastergetter.cpp  mastergetter.h  resoucesdownloader.cpp  resoucesdownloader.h  resources.qrc  singletons.cpp  singletons.h  version.cpp  version.h
Server/includes/: ClientConnection.hpp  Router.hpp  Server.hpp  SpriteMap.hpp  TcpListener.hpp  TcpListener.tpp  TcpListenerSlave.hpp
Server/includes/Session/: Game.hpp  Manager.hpp  Session.hpp
Server/src/: ClientConnection.cpp  Main.cpp  Router.cpp  Server.cpp  TcpListener.cpp
Server/src/Session/: Game.cpp  Manager.cpp  Session.cpp
Server/src/Session/TimedEvent/: TimedEvent.cpp  TimedEvent.hpp
Server/src/Session/components/: Bonuses.hpp  Firerate.hpp  Inventory.hpp  ai.hpp  enemyFactory.hpp
Server/src/Session/enemy/: enemy.hpp
Server/src/Session/enemy/enemy1/: enemy1.cpp  enemy1.hpp
Server/src/Session/enemy/enemy2/: enemy2.cpp  enemy2.hpp
Server/src/Session/enemy/enemy3/: enemy3.cpp  enemy3.hpp
Server/src/Session/systems/: Bonuses.cpp  Bonuses.hpp  Fire.cpp  Fire.hpp  ai.cpp  ai.hpp  gen.cpp  gen.hpp  walls.cpp  walls.hpp
conanPlatformSettings/: linux.txt  windows.txt
src/: Main.cpp
src/game/system/: Parallaxs.hpp
src/game_engine/component/control/: Controller.hpp  Keyboard.hpp  Mouse.hpp
src/game_engine/component/graphical/: AnimatedSprite.hpp  AnimatedSpriteMap.hpp  PrechargedSprite.hpp  Sprite.hpp
src/game_engine/component/physic/: Hitbox.hpp  Position.hpp
src/game_engine/core/: CoreVector.hpp  Time.cpp  Time.hpp
src/game_engine/ecs/: Ecs.hpp  ListComponent.hpp
src/game_engine/sfml/: Graphic.cpp  Graphic.hpp
src/game_engine/system/control/: Controls.cpp  Controls.hpp
src/game_engine/system/graphical/: Graphicals.cpp  Graphicals.hpp  InitAnimatedSprite.cpp  InitAnimatedSprite.hpp  Sprites.cpp  Sprites.hpp
src/game_engine/system/physic/: Acceleration.cpp  Hitboxs.cpp  Hitboxs.hpp  Speeds.cpp  Speeds.hpp
